--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -15,16 +15,16 @@
     <parent>
         <artifactId>FXForm2</artifactId>
         <groupId>com.dooapp.fxform2</groupId>
-        <version>8.3.0-SNAPSHOT</version>
+        <version>10.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>demo</artifactId>
     <dependencies>
         <dependency>
-            <groupId>org.hibernate</groupId>
+            <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
-            <version>5.0.3.Final</version>
+            <version>8.0.0.Final</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -39,12 +39,12 @@
         <dependency>
             <groupId>com.dooapp.fxform2</groupId>
             <artifactId>core</artifactId>
-            <version>8.3.0-SNAPSHOT</version>
+            <version>10.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.dooapp.fxform2</groupId>
             <artifactId>extensions</artifactId>
-            <version>8.3.0-SNAPSHOT</version>
+            <version>10.0.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
     <build>
