--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
     </parent>
     <groupId>com.dooapp.fxform2</groupId>
     <artifactId>FXForm2</artifactId>
-    <version>8.3.0-SNAPSHOT</version>
+    <version>10.0.0-SNAPSHOT</version>
     <name>FXForm 2</name>
     <description>Dynamic JavaFX 2.0 form generation</description>
     <url>http://dooapp.github.com/FXForm2/</url>
@@ -66,6 +66,10 @@
             <url>https://repository.jboss.org/nexus/content/groups/public-jboss/</url>
         </repository>
     </repositories>
+    <properties >
+        <javafx.version>19</javafx.version>
+        <javafx.maven.plugin.version>0.0.6</javafx.maven.plugin.version>
+    </properties>
 
     <build>
         <plugins>
@@ -108,16 +112,21 @@
                     <skipDeploy>true</skipDeploy>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>${javafx.maven.plugin.version}</version>
+            </plugin>
         </plugins>
         <pluginManagement>
             <plugins>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>2.3.2</version>
+                    <version>3.10.1</version>
                     <configuration>
-                        <source>1.8</source>
-                        <target>1.8</target>
+                        <source>17</source>
+                        <target>17</target>
                     </configuration>
                 </plugin>
                 <plugin>
