--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -13,8 +13,8 @@
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>FXForm2</artifactId>
-        <groupId>com.dooapp.fxform2</groupId>
+        <artifactId>fxform2</artifactId>
+        <groupId>com.github.f1uctus.fxform2</groupId>
         <version>10.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -37,12 +37,12 @@
             <version>1.6.1</version>
         </dependency>
         <dependency>
-            <groupId>com.dooapp.fxform2</groupId>
+            <groupId>com.github.f1uctus.fxform2</groupId>
             <artifactId>core</artifactId>
             <version>10.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>com.dooapp.fxform2</groupId>
+            <groupId>com.github.f1uctus.fxform2</groupId>
             <artifactId>extensions</artifactId>
             <version>10.0.0-SNAPSHOT</version>
         </dependency>
